--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <div class="background-image"></div>
   <div class="fixed-text">
     <div class="line">OCSC Welcomes</div>
-    <div class="line">Prabakar Paulsami <span class="designation">- VP, RNT Product Development</span></div>
+    <div class="line">Prabakar Paulsami <span class="designation"> VP, Oracle B2C Service Product Development & COE </span></div>
   </div>
   <div class="bottom-text">
-    <div class="line">Adrian Radulescu <span class="designation">- Sr Director, RNT Cloud Operations</span></div>
+    <div class="line">Adrian Radulescu <span class="designation"> Senior Director, Cloud Operations </span></div>
   </div>
 </body>
 </html>
