--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="Background Image"></div>
+  <div class="background-image"></div>
   <div class="fixed-text">
     <div class="line">OCSC Welcomes</div>
     <div class="line2">Rob Boucher <span class="designation"> SVP, SaaS Operations </span></div>
