--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="background-image"></div>
   <div class="fixed-text">
     <div class="line">OCSC Welcomes</div>
-    <div class="line2">Rob Boucher <span class="designation"> - SVP, SaaS Operations </span></div>
+    <div class="line2">Rob Boucher <span class="designation"> - SVP, SaaS Operations Engineering</span></div>
     <div class="line2">Ric Ginsberg <span class="designation"> - SVP, SaaS Production Engineering </span></div>
   </div>
 </body>
