--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <div class="background-image"></div>
   <div class="fixed-text">
     <div class="line">OCSC Welcomes</div>
-    <div class="line2">Rob Boucher <span class="designation"> - SVP, SaaS Operations Engineering</span></div>
-    <div class="line2">Ric Ginsberg <span class="designation"> - SVP, SaaS Production Engineering </span></div>
+    <div class="line2">David Cross <span class="designation"> - SVP, SaaS Security</span></div>
+    <div class="line2">Swathi Joshi Bhat <span class="designation"> - VP, SaaS Information Security </span></div>
   </div>
 </body>
 </html>
