--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 <body>
   <div class="background-image"></div>
   <div class="fixed-text">
-    <div class="line">OCSC Welcomes</div>
-    <div class="line2">David Cross <span class="designation"> - SVP, SaaS Security</span></div>
-    <div class="line2">Swathi Joshi Bhat <span class="designation"> - VP, SaaS Information Security </span></div>
+    <div class="line">Happy Work Anniversary </div>
+    <div class="line2">Madhura Upadhya <span class="designation"> - Senior Director, Cloud Operations</span></div>
   </div>
 </body>
 </html>
