--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <div class="background-image"></div>
   <div class="fixed-text">
     <div class="line">OCSC Welcomes </div>
-    <div class="line2">Rebecca Stauffer <span class="designation">   - VP, SaaS Operations Engineering</span></div>
-    <div class="line2">Patrick Lindeman <span class="designation">   - VP, Cloud Operations </span></div>
-    <div class="line2">Greg Payne <span class="designation">   - Sr. Director, Service Reliability Development </span></div>
+    <div class="line2">Adam Russell <span class="designation">   - SVP, SaaS Security</span></div>
+    <div class="line2">Praveen Kollaikal <span class="designation">    - VP, Technical Product Management </span></div>
+    <div class="line2">  <span class="designation">   </span></div>
   </div>
 </body>
 </html>
